fixed styling issues causing horizontal scrollbar

--- a/src/components/OrderModal/OrderModal.scss
+++ b/src/components/OrderModal/OrderModal.scss
@@ -1,5 +1,5 @@
 .order-modal{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: rgb(0, 0, 0, 0.80);
     position: fixed;
