--- a/src/styles/_ware.scss
+++ b/src/styles/_ware.scss
@@ -13,7 +13,7 @@
 
 
 .product-page-section{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: $primary-color;
 
